cmake_minimum_required(VERSION 2.8)
project(MoonRakerClient)
add_subdirectory(lib)
add_subdirectory(src)
add_subdirectory(bin)
add_subdirectory(include)
add_subdirectory(test)
INCLUDE_DIRECTORIES("/usr/include/" "${CMAKE_BINARY_DIR}/include")
set(CMAKE_LIBRARY_PATH "${CMAKE_LIBRARY_PATH}" "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_CXX_FLAGS "-std=c++11 -Wall")

add_library(moon_client STATIC src/rs232.cpp src/command.cpp src/data.cpp src/motor.cpp src/zmqdata.cpp src/zmqserver.cpp src/zmqclient.cpp src/moonserver.cpp src/moonclient.cpp)

add_executable(SimpleConsole src/main.cpp src/rs232.cpp src/command.cpp src/data.cpp src/motor.cpp src/zmqdata.cpp src/zmqserver.cpp src/zmqclient.cpp src/moonserver.cpp src/moonclient.cpp)
target_link_libraries(SimpleConsole pthread ncurses zmq zmqpp)
